# Cursor

./: .gitignore  .gitignore.backup  README.md  duck.bat
.duck/: README_DUCK.md  duck.py  pyproject.toml  test_duck_system.md
.duck/dev/: README.md  duck_develop_prompt.md
.duck/docs/: README.md  guides  quickstart.md
.duck/docs/archive/MetaAgentPlan/: PATTERNS.md  README.md  SPEC.md  STATUS.md
.duck/docs/archive/MetaAgentPlan/archive/design-process/: 100_LOOPS_COMPLETE.md  DUCK_100_LOOP_COMPREHENSIVE_ANALYSIS.md  DUCK_FINAL_SPECIFICATION.md  IMPLEMENTATION_APPROVED.md  LOOP_100_FINAL_PRESENTATION.md  duck_plan.md
.duck/docs/archive/MetaAgentPlan/archive/insights/: README.md  (+1 more)
.duck/docs/reports/: CURSOR_REORGANIZATION_PLAN.md  DUCK_COMMAND_READY.md  DUCK_COMMAND_TEST_PLAN.md  DUCK_COMPLETE_IMPLEMENTATION_PLAN.md  DUCK_FEEDBACK_SUMMARY.md  DUCK_FINAL_SESSION_SUMMARY.md  DUCK_PRODUCTION_READY.md  DUCK_REVIEW.md  DUCK_WEEK1_COMPLETE.md  PHASE_1_COMPLETE.md  PHASE_1_PROGRESS.md  PHASE_1_WEEK2_COMPLETION.md  PHASE_2_COMPLETE.md  PHASE_2_KICKOFF.md  PHASE_2_WEEK5_COMPLETE.md  PHASE_2_WEEK6_COMPLETE.md  PHASE_2_WEEK6_KICKOFF.md  PHASE_2_WEEK6_PROGRESS.md  PHASE_2_WEEK7_COMPLETE.md  PHASE_2_WEEK7_KICKOFF.md  SESSION_SUMMARY.md  TODAY_FINAL_SUMMARY.md
.duck/duck/: __init__.py
.duck/duck/cli/: __init__.py  commands.py
.duck/duck/core/: __init__.py  analytics.py  env.py  patterns.py  system.py  validation.py
.duck/duck/tools/: __init__.py  organizer.py  parallel.py  performance.py
.duck/tests/: test_cli_smoke.py  test_enhanced_features.py
docs/: SCHEMAS_GUIDE.md  (+1 more)
(+165 files in other folders)
