[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "duck-ai"
version = "1.0.0-beta"
description = "Revolutionary Personal AI Ecosystem - Your virtual copy and development buddy"
readme = "docs/README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Matheus", email = "matheus@example.com"}
]
keywords = ["ai", "development", "automation", "scientific-software", "configuration-pattern"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering",
]
dependencies = []

[project.scripts]
duck = "duck.cli.commands:main"

[project.urls]
Homepage = "https://github.com/mth-farias/duck"
Repository = "https://github.com/mth-farias/duck.git"
Documentation = "https://github.com/mth-farias/duck#readme"
Issues = "https://github.com/mth-farias/duck/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["duck*"]

[tool.setuptools.package-data]
duck = ["py.typed"]

[tool.setuptools.package-dir]
"" = "."
